--- a/project/templates/base.html
+++ b/project/templates/base.html
@@ -7,6 +7,41 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Flask Auth Example</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bulma/0.7.2/css/bulma.min.css" />
+    <style>
+        .title {
+            margin: 5px;
+        }
+    
+        .content {
+            margin: 5px;
+            width: 100%;
+            display: flex;
+            flex-direction: row;
+            flex-wrap: wrap;
+            user-select: none;
+        }
+    
+        .flight {
+            flex: 20%;
+            padding: 10px;
+            margin: 5px;
+            background-color: #f3f3f3;
+            color: #004835;
+            inline-size: 100%;
+        }
+    
+        .bio {
+            padding: 10px;
+            margin: 5px;
+            background-color: #ffffff;
+            color: #004835;
+        }
+    
+        .name a {
+            color: #00a36f;
+            text-decoration: none;
+        }
+    </style>
 </head>
 
 <body>
