--- a/project/templates/base.html
+++ b/project/templates/base.html
@@ -26,8 +26,11 @@
             padding: 10px;
             margin: 5px;
             background-color: #f3f3f3;
-            color: #004835;
             inline-size: 100%;
+        }
+
+        .flight p {
+            color: #004835;
         }
     
         .bio {
