--- a/project/templates/base.html
+++ b/project/templates/base.html
@@ -7,11 +7,39 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Flask Auth Example</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bulma/0.7.2/css/bulma.min.css" />
+    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
     <style>
         .title {
             margin: 5px;
         }
-    
+
+        .btn{
+            display: inline-block;
+            padding: 6px 12px;
+            margin-bottom: 0;
+            font-size: 14px;
+            font-weight: 400;
+            line-height: 1.42857143;
+            text-align: center;
+            white-space: nowrap;
+            vertical-align: middle;
+            -ms-touch-action: manipulation;
+            touch-action: manipulation;
+            cursor: pointer;
+            -webkit-user-select: none;
+            -moz-user-select: none;
+            -ms-user-select: none;
+            user-select: none;
+            background-image: none;
+            border: 1px solid transparent;
+            border-radius: 4px;
+            text-decoration: none;
+
+            color: #333 !important;
+            background-color: #fff;
+            border-color: #ccc;
+        }
+
         .content {
             margin: 5px;
             width: 100%;
@@ -44,6 +72,107 @@
             color: #00a36f;
             text-decoration: none;
         }
+
+        .container {
+        display: flex;
+        flex-direction: column;
+        height: 100%;
+        width: 100%;
+        min-width: 480px;
+        padding: 0 40px;
+        }
+
+        .breadcrumb {
+        display: flex;
+        border-radius: 10px;
+        margin: auto;
+        text-align: center;
+        top: 50%;
+        width: 100%;
+        height: 40px;
+        transform: translateY(-50%);
+        z-index: 1;
+        justify-content: center;
+        }
+
+
+        .breadcrumb__item {
+        height: 100%;
+        background-color: white;
+        color: #252525;
+        font-family: 'Nunito', sans-serif;
+        border-radius: 7px;
+        letter-spacing: 1px;
+        transition: all 0.3s ease;
+        text-transform: uppercase;
+        position: relative;
+        display: inline-flex;
+        justify-content: center;
+        align-items: center;
+        font-size: 16px;
+        transform: skew(-21deg);
+        box-shadow: 0 2px 5px rgba(0,0,0,0.26);
+        margin: 5px;
+        padding: 0 40px;
+        cursor: pointer;
+        }
+
+        .breadcrumb__item:hover {
+        background: #00a36f;
+        color: #FFF;
+        }
+
+        .breadcrumb__item__selected {
+        background: #00a36f;
+        color: #FFF;
+        }
+
+        .hide {
+        display: none;
+        }
+
+        .show {
+        display: flex;
+        }
+
+        .breadcrumb__inner {
+        display: flex;
+        flex-direction: column;
+        margin: auto;
+        z-index: 2;
+        transform: skew(21deg);  
+        }
+
+        .breadcrumb__title {
+        font-size: 16px;
+        text-overflow: ellipsis;  
+        overflow: hidden;
+        white-space: nowrap;  
+        }
+
+
+        @media all and (max-width: 1000px) {
+        .breadcrumb {
+        height: 35px;
+        }
+
+        .breadcrumb__title{
+        font-size: 11px;
+        }
+        .breadcrumb__item {
+        padding: 0 30px;
+        }
+        }
+
+        @media all and (max-width: 710px) {
+        .breadcrumb {
+        height: 30px;
+        }
+        .breadcrumb__item {
+        padding: 0 20px;
+        }
+
+        }
     </style>
 </head>
 
@@ -56,8 +185,18 @@
                     Home
                 </a>
                 {% if current_user.is_authenticated %}
-                <a href="{{ url_for('main.profile') }}" class="navbar-item">
-                    Profile
+                <a href="{{ url_for('main.flights') }}" class="navbar-item">
+                    Flights
+                </a>
+                {% endif %}
+                {% if current_user.is_authenticated %}
+                <a href="{{ url_for('main.booking_history') }}" class="navbar-item">
+                    Booked
+                </a>
+                {% endif %}
+                {% if current_user.is_authenticated %}
+                <a href="{{ url_for('main.ticket_history') }}" class="navbar-item">
+                    Tickets
                 </a>
                 {% endif %}
                 {% if not current_user.is_authenticated %}
